--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "history": "^5.0.0",
+    "i18next": "^20.3.2",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
+    "react-i18next": "^11.11.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
