--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
@@ -11,27 +12,25 @@
 # next.js
 /.next/
 /out/
-.idea/
 
 # production
 /build
 
 # misc
 .DS_Store
-.eslintcache
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pem
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-debug.log*
 
-# lock
-package-lock.json*
-yarn.lock*
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
