--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "firebase": "^10.12.0",
     "next": "14.2.3",
     "next-intl": "^3.14.0",
     "next-themes": "^0.3.0",
