--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "classnames": "^2.5.1",
     "firebase": "^10.12.0",
     "next": "14.2.3",
