--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "classnames": "^2.5.1",
+    "embla-carousel-react": "^8.1.3",
     "firebase": "^10.12.0",
     "next": "14.2.3",
     "next-intl": "^3.14.0",
