--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "classnames": "^2.5.1",
     "embla-carousel-react": "^8.3.0",
     "firebase": "^11.0.1",
+    "framer-motion": "^11.11.9",
     "next": "15.0.1",
     "next-intl": "^3.23.2",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-feather": "^2.0.10"
+    "react-feather": "^2.0.10",
+    "sass": "^1.80.4"
   },
   "devDependencies": {
     "@types/node": "^22.7.9",
