--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-feather": "^2.0.10",
-    "sass": "^1.80.4"
+    "react-feather": "^2.0.10"
   },
   "devDependencies": {
     "@types/node": "^22.7.9",
