--- a/package.json
+++ b/package.json
@@ -6,29 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "lint": "next lint"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "classnames": "^2.5.1",
-    "embla-carousel-react": "^8.6.0",
-    "firebase": "^11.9.1",
-    "next": "15.3.3",
-    "next-intl": "^4.1.0",
-    "next-themes": "^0.4.6",
-    "react": "^19",
-    "react-dom": "^19",
+    "embla-carousel-react": "^8.1.3",
+    "firebase": "^10.12.0",
+    "next": "14.2.3",
+    "next-intl": "^3.14.0",
+    "next-themes": "^0.3.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-feather": "^2.0.10"
   },
   "devDependencies": {
-    "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
